# ai-prompt-library

./: .codespellignore  .gitignore  .pre-commit-config.yaml  BUNDLER.md  CHANGELOG.md  HISTORY-SPEC.md  README.md  bundle.py  bundle.sh
impromptu/: .codespellignore  .gitmessage.txt  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .taplo.toml  CHANGELOG.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  build_bootstrap.py  pyproject.toml
impromptu/docs/: .markdownlint-cli2.yaml  DECISIONS.md  README.md  ROADMAP.md  TODO-refactor-shared-schemas-and-doc-alignment.md  TODO.md  auto-mode-policy.md  commit-message-standard.md  deep-search.md  examples.md  impromptu-library-model.md  modes-and-settings.md  onboarding.md  pipeline-and-stages.md  project-workspace-model.md  scoring-model.md  service-specific-guidance.md  setup.md  thresholds-and-recommendations.md  user-preferences-and-memory.md
impromptu/docs/architecture/: README.md  pipeline.md
impromptu/docs/controls/: README.md  auto-mode-policy.md  deep-search.md  examples.md  modes-and-settings.md
impromptu/docs/examples/: prompt-library.example.json  prompt-library.example.toml
impromptu/docs/internals/: README.md  scoring-and-thresholds.md
impromptu/factories/: factory-template-v1.1.md
impromptu/registries/: README.md  factories-registry-v3.3.jsonl  rubric-schema-v1.json  seed-prompting-strategies-v1.1.jsonl  seed-prompting-strategies-v3.3.md
impromptu/schemas/: prompt-library.schema.json
impromptu/seed/: README.md
impromptu/seeds/: seed-optimizer.md  seed-profile.md
prompts/: interview-prep.md  (+5 more)
(+141 files in other folders)
