[project]
name = "impromptu"
version = "0.0.0"
description = "Prompt management, prompt libraries, and prompt workflow tooling."
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "D"]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mdformat]
number = true

[tool.codespell]
ignore-words-list = "impromptu,seed,jsonl,llm,llms,pyproject,mdformat,markdownlint,precommit,sqlite,toml,ruff,vale,github,gitlab,worktree"
